# commit-shards

./: .gitignore  Anchor.toml  Cargo.toml  next.config.mjs  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/api/github/[username]/: route.ts
app/api/leaderboard/: route.ts
app/api/shards/[wallet]/: route.ts
app/api/upload/: route.ts
app/api/verify-collection/: route.ts
app/api/verify-shard/: route.ts
app/gallery/: layout.tsx  page.tsx
app/leaderboard/: layout.tsx  page.tsx
app/shard/[mint]/: ShardDetail.tsx  page.tsx
components/: GitHubInput.tsx  MintButton.tsx  PRList.tsx  RoadmapModal.tsx  ShardPreview.tsx  ShareButtons.tsx  WalletButton.tsx
generator/: shard.ts
idl/: shard_registry.json
lib/: auth.ts  github.ts  shard-generator.ts
lib/solana/: mint.ts  providers.tsx
programs/shard-registry/: Cargo.toml
programs/shard-registry/src/: lib.rs
public/: llms.txt
scripts/: create-collection.ts  mint.ts
