[package]
name = "shard-registry"
version = "0.1.0"
description = "On-chain registry for Commit Shard NFTs — stores attributes and enforces 1-per-SHA uniqueness"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shard_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
